--- a/media/page.html
+++ b/media/page.html
@@ -20,7 +20,29 @@
     <script nonce="" src="tagify/dragsort.js"></script>
 </head>
 
-<body>
+<body data-loading="true">
+    <div id="loading">
+        <div style="width: 16px;height: 16px;">
+            <svg fill="#6495ed" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <style>
+                    @keyframes spinner_MGfb {
+                        93.75% {
+                            opacity: .2
+                        }
+                    }
+
+                    .spinner_S1WN {
+                        animation: spinner_MGfb .8s linear infinite;
+                        animation-delay: -.8s
+                    }
+                </style>
+                <circle cx="4" cy="12" r="3" class="spinner_S1WN" />
+                <circle cx="12" cy="12" r="3" class="spinner_S1WN" style="animation-delay:-.65s" />
+                <circle cx="20" cy="12" r="3" class="spinner_S1WN" style="animation-delay:-.5s" />
+            </svg>
+        </div>
+        <span>Loading</span>
+    </div>
     <div id="app">
         <table id="layout">
             <tr>
@@ -63,30 +85,32 @@
                     <input type="text" id="description" v-model="item.description" autocomplete="off">
                 </td>
             </tr>
-            <tr>
-                <td>
-                    <label for="parameters">Parameters:</label>
-                </td>
-                <td>
-                    <table style="width: 100%;">
-                        <tr>
-                            <td style="width: 100%; padding-left: 0;">
-                                <input type="hidden" id="parameters" class="customTagify" ref="parameters">
-                            </td>
-                            <td>
-                                <button type="button" style="padding: 5 0 5 0;height:35px" id="editParameters"
-                                    @click="editParameters">
-                                    {{ paramsEnabled ? 'Apply' : 'Edit' }}
-                                </button>
-                            </td>
-                            <td v-if="paramsEnabled">
-                                <button type="button" style="padding: 5 0 5 0;height:35px" id="cancelEditParameters"
-                                    data-cancel="true" @click="editParameters">Cancel</button>
-                            </td>
-                        </tr>
-                    </table>
-                </td>
-            </tr>
+            <template v-if="isResource">
+                <tr>
+                    <td>
+                        <label for="parameters">Parameters:</label>
+                    </td>
+                    <td>
+                        <table style="width: 100%;">
+                            <tr>
+                                <td style="width: 100%; padding-left: 0;">
+                                    <input type="hidden" id="parameters" class="customTagify" ref="parameters">
+                                </td>
+                                <td>
+                                    <button type="button" style="padding: 5 0 5 0;height:35px" id="editParameters"
+                                        @click="editParameters">
+                                        {{ paramsEnabled ? 'Apply' : 'Edit' }}
+                                    </button>
+                                </td>
+                                <td v-if="paramsEnabled">
+                                    <button type="button" style="padding: 5 0 5 0;height:35px" id="cancelEditParameters"
+                                        data-cancel="true" @click="editParameters">Cancel</button>
+                                </td>
+                            </tr>
+                        </table>
+                    </td>
+                </tr>
+            </template>
             <template v-if="isResource">
                 <tr style="padding-bottom: 15px;">
                     <td>&nbsp;</td>
