--- a/media/page.html
+++ b/media/page.html
@@ -12,7 +12,7 @@
     <link href="tagify/dragsort.css" rel="stylesheet" />
     <link href="page.css" rel="stylesheet" />
 
-    <script nonce="" src="vue/vue.global.prod.js"></script>
+    <script nonce="" src="vue/vue.global.js"></script>
     <script nonce="" src="lodash.min.js"></script>
 
     <script nonce="" src="tagify/tagify.js"></script>
@@ -121,8 +121,8 @@
                 <tr>
                     <td>&nbsp;</td>
                     <td>
-                        <table id="translations" v-if="translations.length > 0">
-                            <tr v-for="(translation, index) in translations" :key="culture">
+                        <table id="translations" v-if="item.translations.length > 0">
+                            <tr v-for="(translation, index) in item.translations" :key="translation.culture">
                                 <td style="padding-left: 0;">
                                     <label :class="{ 'bold': translation.isPrimary }" class="no-wrap"
                                         style="text-align: left;"
