--- a/media/page.html
+++ b/media/page.html
@@ -3,7 +3,6 @@
 
 <head>
     <meta charset="UTF-8">
-    <!-- <000meta http-equiv="Content-Security-Policy" content=""> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LHQ Editor</title>
 
@@ -41,8 +40,9 @@
                 <circle cx="20" cy="12" r="3" class="spinner_S1WN" style="animation-delay:-.5s" />
             </svg>
         </div>
-        <span>Loading</span>
+        <!-- lhq_loading_file_text -->
     </div>
+    <!-- lhq_editor_content_begin -->
     <div id="app">
         <table id="layout" v-if="!loading">
             <tr>
@@ -155,6 +155,7 @@
     </div>
 
     <script src="page.js"></script>
+    <!-- lhq_editor_content_end -->
 </body>
 
 </html>
