--- a/media/page.html
+++ b/media/page.html
@@ -78,11 +78,11 @@
                 </td>
             </tr>
             <tr>
-                <td>
+                <td style="vertical-align: baseline;">
                     <label for="description">Description:</label>
                 </td>
                 <td>
-                    <input type="text" id="description" v-model="item.description" autocomplete="off">
+                     <textarea id="description" v-model="item.description" rows="1" @input="autoResizeTextarea"></textarea>
                 </td>
             </tr>
             <template v-if="isResource">
@@ -123,7 +123,7 @@
                     <td>
                         <table id="translations" v-if="item.translations.length > 0">
                             <tr v-for="(translation, index) in item.translations" :key="translation.culture">
-                                <td style="padding-left: 0;">
+                                <td style="padding-left: 0; vertical-align: baseline;">
                                     <label :class="{ 'bold': translation.isPrimary }" class="no-wrap"
                                         style="text-align: left;"
                                         :title="translation.culture + (translation.isPrimary ? ' [primary]' : '')">
