--- a/media/page.html
+++ b/media/page.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LHQ Editor</title>
 
-    <link href="flexboxgrid.min.css" rel="stylesheet">
+    <!-- <link href="flexboxgrid.min.css" rel="stylesheet"> -->
     <link href="tagify/tagify.css" rel="stylesheet" />
     <link href="tagify/dragsort.css" rel="stylesheet" />
     <link href="page.css" rel="stylesheet" />
@@ -55,6 +55,8 @@
                         :title="'Click to locate ' + item.elementType + ' in tree view...'">
                         {{ fullPath }}
                     </a>
+
+                    <!-- <button @click="showProperties">Show Properties</button> -->
                 </td>
             </tr>
             <tr>
@@ -63,8 +65,8 @@
                 </td>
                 <td>
                     <div style="display: flex; flex-direction: row; align-items: center; gap: 1em; width: 100%;">
-                        <input type="text" id="name" v-model="item.name" ref="name" autocomplete="off" style="flex-basis: 60%;"
-                        @focus="focusOnName">
+                        <input type="text" id="name" v-model="item.name" ref="name" autocomplete="off"
+                            style="flex-basis: 60%;" @focus="focusOnName">
 
                         <template v-if="isResource">
                             <label for="state">State:</label>
@@ -84,7 +86,8 @@
                     <label for="description">Description:</label>
                 </td>
                 <td>
-                     <textarea id="description" v-model="item.description" rows="1" @input="autoResizeTextarea"></textarea>
+                    <textarea id="description" v-model="item.description" rows="1"
+                        @input="autoResizeTextarea"></textarea>
                 </td>
             </tr>
             <template v-if="isResource">
@@ -99,14 +102,13 @@
                                     <input type="hidden" id="parameters" class="customTagify" ref="parameters">
                                 </td>
                                 <td>
-                                    <button type="button" style="padding: 5 0 5 0;height:35px" id="editParameters"
-                                        @click="editParameters">
+                                    <button type="button" id="editParameters" class="big-btn" @click="editParameters">
                                         {{ paramsEnabled ? 'Apply' : 'Edit' }}
                                     </button>
                                 </td>
                                 <td v-if="paramsEnabled">
-                                    <button type="button" style="padding: 5 0 5 0;height:35px" id="cancelEditParameters"
-                                        data-cancel="true" @click="editParameters">Cancel</button>
+                                    <button type="button" id="cancelEditParameters" class="big-btn" data-cancel="true"
+                                        @click="editParameters">Cancel</button>
                                 </td>
                             </tr>
                         </table>
@@ -125,7 +127,7 @@
                     <td>
                         <table id="translations" v-if="item.translations.length > 0">
                             <tr v-for="(translation, index) in item.translations" :key="translation.culture">
-                                <td >
+                                <td>
                                     <div id="translation-text-locked">
                                         <label :class="{ 'bold': translation.isPrimary }" class="no-wrap"
                                             style="text-align: left;"
@@ -133,18 +135,17 @@
                                             @click="focusTranslation(translation)">
                                             {{ translation.culture }}
                                         </label>
-                                        <div 
-                                        :class="'codicon codicon-' + (translation.valueRef.locked ? 'lock' : 'unlock')"
-                                        :title="translation.valueRef.locked ? 'Locked (click to unlock)' : 'Unlocked (Click to lock)'"
-                                        @click="lockTranslation(translation)"></div>
+                                        <div :class="'codicon codicon-' + (translation.valueRef.locked ? 'lock' : 'unlock')"
+                                            :title="translation.valueRef.locked ? 'Locked (click to unlock)' : 'Unlocked (Click to lock)'"
+                                            @click="lockTranslation(translation)"></div>
                                     </div>
                                 </td>
                                 <td>
-                                    <textarea ref="translationTextArea" v-model="translation.valueRef.value" rows="1" @input="autoResizeTextarea"
+                                    <textarea ref="translationTextArea" v-model="translation.valueRef.value" rows="1"
+                                        @input="autoResizeTextarea"
                                         :placeholder="'Translation for ' + translation.culture"
                                         :readonly="translation.valueRef.locked"
-                                        :class="{ 'locked': translation.valueRef.locked }"
-                                        @focus="focusOnTranslation"
+                                        :class="{ 'locked': translation.valueRef.locked }" @focus="focusOnTranslation"
                                         @blur="blurOnTranslation"
                                         :title="translation.valueRef.locked ? 'Editing of translation is locked.':''"></textarea>
                                 </td>
@@ -157,6 +158,83 @@
                 </tr>
             </template>
         </table>
+
+        <div class="modal-dialog-block" v-if="modelProperties.visible">
+            <div class="modal-dialog">
+                <div>
+                    Properties
+                </div>
+                <div>
+                    <table id="properties">
+                        <tr>
+                            <td colspan="2" class="section-row">Layout</td>
+                        </tr>
+                        <!-- <span class="codicon codicon-list-tree"></span> -->
+                        <!-- <span class="codicon codicon-list-flat"></span> -->
+                        <tr>
+                            <td colspan="2">
+                                <div class="layout-row">
+                                    <label>
+                                        <input type="radio" v-model="modelProperties.categories" :value="true">
+                                        Categories and resources
+                                    </label>
+                                    <label>
+                                        Hierarchical view of categories and resources.
+                                    </label>
+                                    <label v-if="modelProperties.categories">
+                                        <input type="checkbox" v-model="modelProperties.resources" :true-value="'All'"
+                                            :false-value="'Categories'">
+                                        Allow resources under root
+                                    </label>
+                                </div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td colspan="2">
+                                <div class="layout-row">
+                                    <label>
+                                        <input type="radio" v-model="modelProperties.categories" :value="false">
+                                        Resources only
+                                    </label>
+                                    <label>
+                                        Flat view of resources without categories.
+                                    </label>
+                                </div>
+                            </td>
+
+                        </tr>
+                        <tr>
+                            <td colspan="2" class="section-row">Model version</td>
+                        </tr>
+                        <tr>
+                            <td colspan="2">
+                                <div class="layout-row">
+                                    <label>
+                                        v{{ modelProperties.modelVersion }}
+                                    </label>
+                                </div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td colspan="2" class="section-row">Code Generator Template</td>
+                        </tr>
+                        <tr>
+                            <td colspan="2">
+                                <div class="layout-row">
+                                    <label>
+                                        {{ modelProperties.templateId }}
+                                    </label>
+                                </div>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                <div>
+                    <button type="button" style="margin-right: 8px;" @click="saveProperties">OK</button>
+                    <button type="button" @click="cancelProperties">Cancel</button>
+                </div>
+            </div>
+        </div>
     </div>
 
     <script src="page.js"></script>
